--- a/emacs/.doom.d/config.org
+++ b/emacs/.doom.d/config.org
@@ -1216,17 +1216,36 @@ REVERSE? it when true. Returns the selected buffer."
 #+end_src
 *** bindings
 #+begin_src elisp :noweb-ref exwm :tangle no
-(transient-define-prefix emms-dwim-menu ()
-  "EMMS menu"
-  ["EMMS"
-   ("s" "Systrum" (lambda () (interactive)
-                    (emms-play-url "https://systrum.net/SSR2.m3u")))
-   ("l" "Likes" (lambda () (interactive)
-                  (with-current-emms-playlist
-                    (emms-playlist-current-clear)
-                    (setq! emms-random-playlist t)
-                    (emms-add-directory (concat sarg/media-dir "/music_liked/"))
-                    (emms-random))))])
+(autoload #'emms-stop "emms" nil t)
+(autoload #'emms-pause "emms" nil t)
+(autoload #'emms-previous "emms" nil t)
+(let ((my-vol-last-change 0))
+  (defun my-vol-change (up)
+    (let* ((time-now (car (time-convert nil 1000)))
+           (delta (- time-now my-vol-last-change)))
+      (emms-volume-pulse-change
+       (* up (if (< delta 200) 5 2)))
+      (setq my-vol-last-change time-now))))
+
+(transient-define-prefix dash-menu/audio ()
+  "Audio menu"
+  [["Play"
+    ("s" "Systrum" (lambda () (interactive)
+                     (emms-play-url "https://systrum.net/SSR2.m3u")))
+    ("l" "Likes" (lambda () (interactive)
+                   (with-current-emms-playlist
+                     (emms-playlist-current-clear)
+                     (setq! emms-random-playlist t)
+                     (emms-add-directory (concat sarg/media-dir "/music_liked/"))
+                     (emms-random))))]
+   ["EMMS"
+    ("<delete>" "pause" emms-pause :format "Del %d")
+    ("<right>" "next" (lambda () (interactive) (funcall emms-player-next-function)) :transient t :format "  → %d")
+    ("<left>" "prev" emms-previous :transient t :format "  ← %d")]
+
+   ["Sound"
+    ("<prior>" "volume up" (lambda () (interactive) (my-vol-change 1)) :transient t :format "PgUp %d")
+    ("<next>" "volume down" (lambda () (interactive) (my-vol-change -1)) :transient t :format "PgDn %d")]])
 
 (defun emms-play-dwim ()
   "Resume playing or offer to select what to play."
@@ -1236,23 +1255,14 @@ REVERSE? it when true. Returns the selected buffer."
       (emms-pause)
     (emms-dwim-menu)))
 
-(let ((my-vol-last-change 0))
-  (defun my-vol-change (up)
-    (let* ((time-now (car (time-convert nil 1000)))
-           (delta (- time-now my-vol-last-change)))
-      (emms-volume-pulse-change
-       (* up (if (< delta 200) 5 2)))
-      (setq my-vol-last-change time-now))))
-
 (exwm/bind-command
  "<XF86AudioRaiseVolume>" (lambda () (interactive) (my-vol-change 1))
  "<XF86AudioLowerVolume>" (lambda () (interactive) (my-vol-change -1))
  "<XF86AudioMute>" "pactl set-sink-mute @DEFAULT_SINK@ toggle"
  "<XF86AudioMicMute>" "pactl set-source-mute @DEFAULT_SOURCE@ toggle")
 
-(autoload #'emms-stop "emms" nil t)
-(autoload #'emms-previous "emms" nil t)
 (exwm/bind-command
+ "<f13> <deletechar>" #'dash-menu/audio
  "<XF86AudioPlay>" #'emms-play-dwim
  "<XF86AudioPause>" #'emms-stop
  "<XF86AudioPrev>" #'emms-previous
